Bug 692139 - Unexpected Change of RenderingIntent for Images when in BandingMode
Summary: Unexpected Change of RenderingIntent for Images when in BandingMode
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color (show other bugs)
Version: master
Hardware: PC Windows XP
: P2 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-10 15:19 UTC by Thomas
Modified: 2012-04-12 17:13 UTC (History)
1 user (show)

See Also:
Customer: 582
Word Size: ---


Attachments
PDF with just a CMYK Image (29.66 KB, application/pdf)
2011-04-10 15:19 UTC, Thomas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas 2011-04-10 15:19:06 UTC
Created attachment 7442 [details]
PDF with just a CMYK Image

A predefined RenderingIntent is overwritten for Images, when BandingMode is used.

I have attached a PDF Document, wich has just an CMYK Image inside.

Converting the 100% pure CMYK patches with an AbsoluteColorimetric Intent,
and just some "Fake ICC Profiles" gives for the Process Colors, without Banding:
C 91 0 8 0
M 4 75 0 0
Y 5 0 100 0
K 75 68 65 90

And with Banding:
C 86 0 20 0
M 11 80 0 0
Y 7 0 100 0
K 73 68 67 89

Commandline for correct result:
gswin32.exe ^
-dBandHeight=200 ^
-sDEVICE=tiffsep ^
-r72 ^
-sDefaultCMYKProfile#"ps_cmyk.icc" ^
-sOutputICCProfile#"default_cmyk.icc" ^
-o "C:\myTiff_72dpi.tif" ^
-c "3 .setrenderingintent" -f ^
"c:\CMYK_Image.pdf"

Commandline for the Intent to fall back to default:
gswin32.exe ^
-dBandHeight=200 ^
-sDEVICE=tiffsep ^
-r600 ^
-sDefaultCMYKProfile#"ps_cmyk.icc" ^
-sOutputICCProfile#"default_cmyk.icc" ^
-o "C:\myTiff_600dpi.tif" ^
-c "3 .setrenderingintent" -f ^
"c:\CMYK_Image.pdf"
Comment 1 Michael Vrhel 2011-05-19 04:50:52 UTC
Looking into this now.
Comment 2 Michael Vrhel 2011-07-16 06:08:52 UTC
There is def. an issue with respect to rendering intent and images going through as high level images.  I am working on a fix for this now as it is a part of an overall on how rendering intent is specified within ghostscript.
Comment 3 Michael Vrhel 2011-07-16 20:41:13 UTC
Testing fix for this now