Fix so that rendering intent makes it properly through clist along with expanded RI capabilities

This fixes bug 692139, also adds support for the ability to override the
internal rendering intent(s) with an externally set rendering intent.  Also,
it is possible to specify specific rendering intents for RGB graphics, images
and text as well as CMYK graphic images and text.  Progressions occur in the
regression test suite.  In particular the file icc_rendering_intent.pdf at 300dpi
now renders correctly.